Example-Applications/kubernetes-mynginx-lb.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mynginx
  name: mynginx2
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mynginx
  sessionAffinity: None
  type: LoadBalancer
